# vite-plus

./: .clippy.toml  .gitattributes  .gitignore  .gitmodules  .oxfmtrc.json  .rustfmt.toml  .typos.toml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FIX_GETORDER_BUG.patch  GITHUB_ACTIONS_CACHE_FINDINGS.md  LICENSE  MAINTENANCE.md  README.md  deny.toml  docs-fmt-canary.md  dprint.json  flaky-test.sh  justfile  mise.toml  netlify.toml  package.json  performance.md  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  spawn_resolve_vite_config_profile.md  task-cache-ci-findings.md  tsconfig.json  vite-task.json  vite.config.json  vite.config.ts  vitest.config.ts
bench/: .gitignore  Cargo.toml  generate-monorepo.ts  tsconfig.json
bench/benches/: auto_install.sh  workspace_load.rs
bench/fixtures/monorepo/: package.json  vite-plus.json
crates/fspy/: Cargo.toml  README.md  build.rs
crates/fspy/examples/: cli.rs  fsacc.rs
crates/fspy/src/: arena.rs  command.rs  fixture.rs  ipc.rs  lib.rs
crates/fspy/src/unix/: macos_fixtures.rs  mod.rs
crates/fspy/src/windows/: mod.rs
crates/fspy/tests/: node_fs.rs  rust_std.rs  rust_tokio.rs  static_executable.rs  test_utils.rs
crates/fspy_detours_sys/: Cargo.toml  README.md  build.rs
crates/fspy_detours_sys/src/: generated_bindings.rs  lib.rs
crates/fspy_detours_sys/tests/: bindings.rs
crates/fspy_preload_unix/: Cargo.toml  README.md
crates/fspy_preload_unix/src/: lib.rs  libc.rs
crates/fspy_preload_unix/src/client/: convert.rs  mod.rs  raw_exec.rs
crates/fspy_preload_unix/src/interceptions/: dirent.rs  mod.rs  open.rs  stat.rs
crates/fspy_preload_unix/src/macros/: linux.rs  macos.rs  mod.rs
crates/fspy_preload_windows/: Cargo.toml  README.md
crates/fspy_preload_windows/src/: stack_once.rs
crates/fspy_preload_windows/src/windows/: client.rs  convert.rs  detour.rs  mod.rs  winapi_utils.rs
crates/fspy_shared/: Cargo.toml  README.md
crates/fspy_shared/src/ipc/: mod.rs  native_str.rs  shm_io.rs
crates/fspy_shared/src/windows/: mod.rs
crates/fspy_shared_unix/: Cargo.toml  README.md
crates/fspy_shared_unix/src/: elf.rs  lib.rs  open_exec.rs  payload.rs
crates/fspy_shared_unix/src/exec/: fs.rs  mod.rs  shebang.rs  which.rs
crates/fspy_shared_unix/src/spawn/: macos.rs  mod.rs
crates/seccomp_unotify/: Cargo.toml
crates/seccomp_unotify/src/payload/: filter.rs
crates/vite_cli_snapshots/: Cargo.toml
crates/vite_cli_snapshots/tests/: redact_unit.rs
crates/vite_cli_snapshots/tests/cli_snapshots/: README.md  flavor.rs  main.rs  redact.rs
crates/vite_error/: Cargo.toml
crates/vite_error/src/: lib.rs
crates/vite_global_cli/: Cargo.toml  build.rs  completion-register.bash
crates/vite_global_cli/src/: cli.rs  command_picker.rs  error.rs  help.rs  js_executor.rs  main.rs  upgrade_check.rs
crates/vite_global_cli/src/commands/: add.rs  config.rs  dedupe.rs  delegate.rs  dlx.rs  implode.rs  install.rs  link.rs  lint_staged.rs  migrate.rs  mod.rs  new.rs  outdated.rs  passthrough.rs  pm.rs  prepare.rs  release.rs  remove.rs  run_or_delegate.rs  shell.rs  staged.rs  unlink.rs  update.rs  version.rs  vpr.rs  vpx.rs  why.rs
crates/vite_global_cli/src/shim/: cache.rs  corepack.rs  dispatch.rs  exec.rs  mod.rs
crates/vite_global_cli/src/tips/: mod.rs  use_vpx_or_run.rs
crates/vite_global_cli/tests/: passthrough_e2e.rs
crates/vite_migration/: Cargo.toml
crates/vite_migration/rules/: oxlint-config.yaml  oxlint-simple.yaml
crates/vite_migration/src/: ast_grep.rs  eslint.rs  file_walker.rs  import_rewriter.rs  lib.rs  package.rs  prettier.rs  script_rewrite.rs  vite_config.rs
crates/vite_package_graph/: Cargo.toml
crates/vite_package_graph/src/: package_manager.rs
crates/vite_package_manager/: Cargo.toml
crates/vite_package_manager/src/: add.rs  config.rs  download.rs  lib.rs  main.rs  package.rs  package_manager.rs  remove.rs  request.rs  shim.rs
crates/vite_package_manager/src/commands/: cache.rs  mod.rs  (+8 more)
crates/vite_path/: Cargo.toml  README.md
crates/vite_path/src/: absolute.rs  lib.rs  relative.rs
crates/vite_pm_cli/: Cargo.toml  README.md
crates/vite_pm_cli/src/: cli.rs  config.rs  dispatch.rs  error.rs  handlers.rs  helpers.rs  lib.rs  package_manager.rs  request.rs  shim.rs
crates/vite_pm_cli_macros/: Cargo.toml
crates/vite_pm_cli_macros/src/: lib.rs
crates/vite_shared/: Cargo.toml
crates/vite_shared/src/: cache.rs  conventional_commit.rs  env_config.rs  env_vars.rs  error.rs  git.rs  header.rs  home.rs  http.rs  interactivity.rs  lib.rs  output.rs  package_json.rs  passthrough.rs  path_env.rs  process.rs  stdio.rs  string_similarity.rs  tls.rs  tracing.rs  versioning.rs
crates/vite_static_config/: Cargo.toml  README.md
crates/vite_static_config/src/: lib.rs
crates/vite_task/: Cargo.toml
crates/vite_task/docs/: boolean-flags.md  rfc-cache-fingerprint-ignore-patterns.md  rfc-sfw-integration.md  task-cache.md  terminologies.md  vite-install.md  vite-run.md  wildcard-env-patterns.md
crates/vite_task/src/: add.rs  build.rs  cache.rs  cmd.rs  collections.rs  config.rs  doc.rs  error.rs  execute.rs  fingerprint.rs  fmt.rs  fs.rs  glob.rs  install.rs  lib.rs  lib_cmd.rs  lint.rs  main.rs  maybe_str.rs  schedule.rs  str.rs  test.rs  test_utils.rs  types.rs  ui.rs  vite.rs
crates/vite_trampoline/: Cargo.toml
crates/vite_trampoline/src/: main.rs
crates/vite_tui/: Cargo.toml  README.md
crates/vite_tui/src/: action.rs  app.rs  components.rs  config.rs  lib.rs  logging.rs  main.rs  tui.rs
crates/vite_workspace/: Cargo.toml  README.md
crates/vite_workspace/src/: error.rs  lib.rs  main.rs  package_manager.rs
fspy/: .gitignore  Cargo.toml  mise.toml  node_spawn.mjs
fspy/.devcontainer/: devcontainer.json
fspy/.github/workflows/: bench.yml  test.yml
fspy/crates/fspy/: Cargo.toml  build.rs
fspy/crates/fspy_e2e/: e2e_config.toml
fspy/crates/fspy_preload_unix/: Cargo.toml
fspy/crates/fspy_preload_windows/: build.rs
fspy/crates/fspy_shared/: Cargo.toml
fspy/interpose/: Cargo.toml
fspy/interpose/.cargo/: config.toml
fspy/interpose/src/: lib.rs
(+2064 files in other folders)
