[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
authors = ["Vite+ Authors"]
edition = "2024"
license = "MIT"
rust-version = "1.87.0"

[workspace.lints.rust]
absolute_paths_not_starting_with_crate = "warn"
non_ascii_idents = "warn"
unit-bindings = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)', 'cfg(coverage_nightly)'] }
tail_expr_drop_order = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_unsafe = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
# restriction
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
print_stdout = "warn"
print_stderr = "warn"
allow_attributes = "warn"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
cargo_common_metadata = "allow"

[workspace.dependencies]
anyhow = "1.0.98"
bincode = "2.0.1"
bstr = "1.12.0"
clap = "4.5.40"
compact_str = "0.9.0"
dashmap = "6.1.0"
diff-struct = "0.5.3"
edit = "0.1.5"
fspy = { git = "https://github.com/branchseer/fspy/", branch = "main" } # { path = "../fspy" }
futures-core = "0.3.31"
futures-util = "0.3.31"
itertools = "0.14.0"
petgraph = "0.8.2"
rayon = "1.10.0"
relative-path = "2.0.1"
rusqlite = "0.37.0"
rustc-hash = "2.1.1"
serde = "1.0.219"
serde_json = "1.0.140"
serde_yml = "0.0.12"
shell-escape = "0.1.5"
tokio = "1.46.1"
twox-hash = "2.1.1"
vite_package_manager = { path = "crates/vite_package_manager" }
wax = "0.6.0"

[profile.dev]
# Disabling debug info speeds up local and CI builds,
# and we don't rely on it for debugging that much.
debug = false

[profile.release]
# Configurations explicitly listed here for clarity.
# Using the best options for performance.
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols" # set to `false` for debug information
debug = false # set to `true` for debug information
panic = "abort" # Let it crash and force ourselves to write safe Rust.
