[workspace]
resolver = "3"
members = ["bench", "crates/*", "packages/cli/binding", "packages/global/binding"]

[workspace.package]
authors = ["Vite+ Authors"]
edition = "2024"
license = "BUSL-1.1"
rust-version = "1.89.0"

[workspace.lints.rust]
absolute_paths_not_starting_with_crate = "warn"
non_ascii_idents = "warn"
unit-bindings = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)', 'cfg(coverage_nightly)'] }
tail_expr_drop_order = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_unsafe = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
# restriction
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
print_stdout = "warn"
print_stderr = "warn"
allow_attributes = "warn"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
cargo_common_metadata = "allow"

[workspace.dependencies]
anyhow = "1.0.98"
async-trait = "0.1.89"
ast-grep-config = "0.40.1"
ast-grep-core = "0.40.1"
ast-grep-language = { version = "0.40.1", default-features = false, features = ["tree-sitter-bash", "tree-sitter-typescript"] }
backon = "1.3.0"
bincode = "2.0.1"
bstr = { version = "1.12.0", default-features = false, features = ["alloc", "std"] }
clap = "4.5.40"
criterion = { version = "0.7", features = ["html_reports"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
directories = "6.0.0"
flate2 = "1.0.35"
fspy = { git = "https://github.com/voidzero-dev/vite-task", rev = "1439516" }
futures-util = "0.3.31"
hex = "0.4.3"
httpmock = "0.7"
ignore = "0.4"
indoc = "2.0.5"
monostate = "1.0.2"
napi = { version = "3.0.0", default-features = false, features = ["async", "error_anyhow"] }
napi-build = "2"
napi-derive = { version = "3.0.0", default-features = false, features = ["type-def", "strict"] }
nix = { version = "0.30.1", features = ["dir"] }
pathdiff = "0.2.3"
reqwest = { version = "0.12", default-features = false }
rusqlite = { version = "0.37.0", features = ["bundled"] }
semver = "1.0.26"
serde = "1.0.219"
serde_json = "1.0.140"
serde_yml = "0.0.12"
sha1 = "0.10.6"
sha2 = "0.10.9"
tar = "0.4.43"
tempfile = "3.14.0"
test-log = { version = "0.2.18", features = ["trace"] }
thiserror = "2"
tokio = "1.48.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "serde"] }
vite_command = { path = "crates/vite_command" }
vite_error = { path = "crates/vite_error" }
vite_glob = { git = "https://github.com/voidzero-dev/vite-task", rev = "1439516" }
vite_install = { path = "crates/vite_install" }
vite_migration = { path = "crates/vite_migration" }
vite_path = { git = "https://github.com/voidzero-dev/vite-task", rev = "1439516" }
vite_str = { git = "https://github.com/voidzero-dev/vite-task", rev = "1439516" }
vite_task = { git = "https://github.com/voidzero-dev/vite-task", rev = "1439516" }
vite_workspace = { git = "https://github.com/voidzero-dev/vite-task", rev = "1439516" }
wax = "0.6.0"
which = "8.0.0"

# =============================================================================
# Local Development Patches
# =============================================================================
# This section patches vite-task crates to use local paths for simultaneous
# vite-task and vite-plus development. When making changes to vite-task that
# affect vite-plus, this allows testing without publishing or pushing commits.
#
# To use: Ensure vite-task is cloned at ../vite-task relative to vite-plus.
# Comment out this section before committing.
# =============================================================================
# [patch."https://github.com/voidzero-dev/vite-task"]
# fspy = { path = "../vite-task/crates/fspy" }
# vite_glob = { path = "../vite-task/crates/vite_glob" }
# vite_path = { path = "../vite-task/crates/vite_path" }
# vite_str = { path = "../vite-task/crates/vite_str" }
# vite_task = { path = "../vite-task/crates/vite_task" }
# vite_workspace = { path = "../vite-task/crates/vite_workspace" }

[profile.dev]
# Disabling debug info speeds up local and CI builds,
# and we don't rely on it for debugging that much.
debug = false

[profile.release]
# Configurations explicitly listed here for clarity.
# Using the best options for performance.
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols" # set to `false` for debug information
debug = false # set to `true` for debug information
panic = "abort" # Let it crash and force ourselves to write safe Rust.
