[package]
name = "fspy"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
allocator-api2 = { workspace = true, features = ["alloc"] }
bincode = { workspace = true }
bstr = { workspace = true, default-features = false }
bumpalo = { workspace = true }
fspy_shared = { workspace = true }
futures-util = { workspace = true }
libc = { workspace = true }
ouroboros = { workspace = true }
rand = { workspace = true }
slab = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["net", "process", "io-util", "sync"] }
which = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
arrayvec = { workspace = true }
blink-alloc = { workspace = true }
fspy_seccomp_unotify = { workspace = true, features = ["supervisor"] }
nix = { workspace = true, features = ["uio"] }
syscalls = { workspace = true, features = ["std"] }
thread_local = { workspace = true }
tokio = { workspace = true, features = ["bytes"] }
tokio-seqpacket = { workspace = true }

[target.'cfg(unix)'.dependencies]
fspy_preload_unix = { workspace = true }
fspy_shared_unix = { workspace = true }
memmap2 = { workspace = true }
nix = { workspace = true, features = ["fs", "process", "socket", "feature"] }
passfd = { git = "https://github.com/polachok/passfd", features = ["async"] }

[target.'cfg(target_os = "macos")'.dependencies]
phf = { workspace = true }

[target.'cfg(any(target_os = "macos", windows))'.dependencies]
const_format = { workspace = true, features = ["fmt"] }
xxhash-rust = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
fspy_detours_sys = { workspace = true }
fspy_preload_windows = { workspace = true }
winapi = { workspace = true, features = ["winbase", "securitybaseapi", "handleapi"] }
winsafe = { workspace = true }

[target.'cfg(target_os = "macos")'.dev-dependencies]
tempfile = { workspace = true }

[dev-dependencies]
csv-async = { workspace = true }
ctor = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs", "io-std"] }

[build-dependencies]
anyhow = { workspace = true }
attohttpc = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
xxhash-rust = { workspace = true, features = ["xxh3"] }
