[package]
name = "fspy_detours_sys"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
winapi = { version = "0.3.9", features = ["minwindef", "libloaderapi", "processthreadsapi", "windef"] }

[lints]
workspace = true

[dev-dependencies]
bindgen = "0.72.1"
