[package]
name = "fspy_preload_unix"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[target.'cfg(target_os = "linux")'.dependencies]
arrayvec = { workspace = true }
const_format = { workspace = true }
fspy_seccomp_unotify = { workspace = true, features = ["target"] }
libc-print = { workspace = true }
syscalls = { workspace = true }

[target.'cfg(unix)'.dependencies]
anyhow = { workspace = true }
arrayvec = { workspace = true }
bincode = { workspace = true }
bstr = { workspace = true, default-features = false }
bytemuck = { workspace = true }
ctor = { workspace = true }
derive-where = { workspace = true }
fspy_shared = { workspace = true }
fspy_shared_unix = { workspace = true }
libc = { workspace = true }
memmap2 = { workspace = true }
nix = { workspace = true, features = ["signal", "fs", "socket", "mman", "time"] }
passfd = { workspace = true }
path-dedot = { workspace = true }
ref-cast = { workspace = true }
socket2 = { workspace = true }
thread_local = { workspace = true }
which = { workspace = true }
