[package]
name = "fspy_preload_unix"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[target.'cfg(target_os = "linux")'.dependencies]
const_format = { workspace = true }
fspy_seccomp_unotify = { workspace = true, features = ["target"] }
syscalls = { workspace = true }

[target.'cfg(unix)'.dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
bstr = { workspace = true, default-features = false }
bytemuck = { workspace = true }
ctor = { workspace = true }
fspy_shared = { workspace = true }
fspy_shared_unix = { workspace = true }
libc = { workspace = true }
memmap2 = { workspace = true }
nix = { workspace = true, features = ["signal", "fs", "socket", "mman", "time"] }
passfd = { workspace = true }
ref-cast = { workspace = true }
which = { workspace = true }
