[package]
name = "fspy_preload_windows"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[target.'cfg(target_os = "windows")'.dependencies]
arrayvec = { workspace = true }
backtrace = { workspace = true }
bincode = { workspace = true }
bytemuck = { workspace = true }
constcat = { workspace = true }
derive-where = { workspace = true }
fspy_detours_sys = { workspace = true }
fspy_shared = { workspace = true }
ntapi = { workspace = true }
path-dedot = { workspace = true }
ref-cast = { workspace = true }
smallvec = { workspace = true }
which = { workspace = true }
widestring = { workspace = true }
winapi = { workspace = true, features = ["winerror", "winbase", "namedpipeapi", "memoryapi", "std"] }
winsafe = { workspace = true }

[target.'cfg(target_os = "windows")'.dev-dependencies]
tempfile = { workspace = true }

[dependencies]
dashmap = { workspace = true }
