[package]
name = "fspy_shared"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
allocator-api2 = { workspace = true }
bincode = { workspace = true }
bstr = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
bytemuck = { workspace = true }
os_str_bytes = { workspace = true }
winapi = { workspace = true, features = ["std"] }
winsafe = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
phf = { workspace = true }

[target.'cfg(unix)'.dependencies]
base64 = { workspace = true }
derive-where = { workspace = true }
libc = { workspace = true }
nix = { workspace = true }

# [features]
# supervisor = ["dep:tokio", "dep:passfd"]
# target = []
