[package]
name = "fspy_shared_unix"
version = "0.0.0"
edition.workspace = true
publish = false

[target.'cfg(unix)'.dependencies]
nix = "0.30.1"
base64 = { version = "0.22.1" }
bincode = "2.0.1"
bstr = "1.12.0"
anyhow = "1.0.98"
fspy_shared = { workspace = true }
stackalloc = "1.2.1"

[dev-dependencies]
tempfile = "3.13.0"
libc = "0.2.171"

[target.'cfg(target_os = "linux")'.dependencies]
seccomp_unotify = { workspace = true, features = ["target"] }
memmap2 = "0.9.7"
elf = { version = "0.8.0", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
phf = { version = "0.11.3", features = ["macros"] }
