[package]
name = "vite_cli_snapshots"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true
description = "PTY-based CLI snapshot test suite for vite-plus (dev-only, never packaged)"

[[bin]]
name = "vpt"
path = "src/bin/vpt/main.rs"
test = false

[dependencies]
cp_r = { workspace = true }
ctrlc = { workspace = true }
pty_terminal_test_client = { workspace = true, features = ["testing"] }
serde_json = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true, features = ["fs", "poll", "socket"] }

[dev-dependencies]
cow-utils = { workspace = true }
dunce = { workspace = true }
libtest-mimic = { workspace = true }
pty_terminal_test = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
shell-escape = { workspace = true }
snapshot_test = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }
which = { workspace = true }

[target.'cfg(windows)'.dev-dependencies]
junction = { workspace = true }

[lints]
workspace = true

[[test]]
name = "cli_snapshots"
harness = false
