[package]
name = "vite_error"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
bstr = { workspace = true }
nix = { workspace = true }
petgraph = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
thiserror = { workspace = true }
wax = { workspace = true }
