[package]
name = "vite_package_graph"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[dependencies]
petgraph = { workspace = true, features = ["serde-1"] }
rustc-hash = { workspace = true }
serde = { workspace = true, features = ["derive"] }
# use `preserve_order` feature to preserve the order of the fields in `package.json`
serde_json = { workspace = true, features = ["preserve_order"] }
serde_yml = { workspace = true }
vite_error = { workspace = true }
vite_glob = { workspace = true }
vite_path = { workspace = true }
vite_str = { workspace = true }
wax = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
test-log = { workspace = true }

[lints]
workspace = true
