[package]
name = "vite_package_manager"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
compact_str = { workspace = true, features = ["serde"] }
petgraph = { workspace = true, features = ["serde-1"] }
rustc-hash = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yml = { workspace = true }
vite_error = { workspace = true }
wax = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
