[package]
name = "vite_shared"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[dependencies]
directories = { workspace = true }
nix = { workspace = true, features = ["poll", "term"] }
owo-colors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
supports-color = "3"
thiserror = { workspace = true }
tracing-subscriber = { workspace = true }
vite_path = { workspace = true }
vite_str = { workspace = true }

[target.'cfg(not(target_os = "windows"))'.dependencies]
rustls = { workspace = true }

[lints]
workspace = true
