[package]
name = "vite_task"
version = "0.0.0"
edition.workspace = true
include = ["/src"]
license.workspace = true
publish = false
readme = "README.md"
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true, features = ["derive"] }
bstr = { workspace = true }
clap = { workspace = true, features = ["derive"] }
compact_str = { workspace = true, features = ["serde"] }
dashmap = { workspace = true }
diff-struct = { workspace = true }
edit = { workspace = true }
itertools = { workspace = true }
petgraph = { workspace = true }
rayon = { workspace = true }
relative-path = { workspace = true }
rusqlite = { workspace = true, features = ["bundled"] }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
shell-escape = { workspace = true }
twox-hash = { workspace = true }
vite_package_manager = { workspace = true }
wax = { workspace = true }
fspy = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "io-std", "macros"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", features = ["dir"] }
