[package]
name = "vite_workspace"
version = "0.1.0"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
wax = "0.6.0"
anyhow = "1.0.97"
serde_yml = "0.0.12"
serde_json = "1.0.140"
petgraph = {  version = "0.7.1", features = ["serde-1"] }
compact_str = { version = "0.9.0", features = ["serde"] }
webbrowser = "1.0.4"
tiny_http = "0.12.0"
rustc-hash = "2.1.1"

[lints]
workspace = true

